{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 11,
  "lineage": "16263880-bf06-d956-81de-8308f09a8bed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029618b2fd808ac68",
            "domain": "vpc",
            "id": "eipalloc-029618b2fd808ac68",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-9-25.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.9.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:internet-gateway/igw-08629252821794655",
            "id": "igw-08629252821794655",
            "owner_id": "311747045935",
            "tags": {
              "Name": "dev IGW"
            },
            "tags_all": {
              "Name": "dev IGW"
            },
            "vpc_id": "vpc-0d6aba32cc805d085"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029618b2fd808ac68",
            "connectivity_type": "public",
            "id": "nat-0bdf6e05ff8f7ce08",
            "network_interface_id": "eni-0d17bd108d6b6d2ab",
            "private_ip": "10.82.1.127",
            "public_ip": "18.135.9.25",
            "subnet_id": "subnet-0f33ff8a562006d04",
            "tags": {
              "Name": "dev NAT Gateway"
            },
            "tags_all": {
              "Name": "dev NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-0bb07b1438df771e4",
            "id": "rtb-0bb07b1438df771e4",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bdf6e05ff8f7ce08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6aba32cc805d085"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-06cc9a9ce9f0a5cca",
            "id": "rtb-06cc9a9ce9f0a5cca",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08629252821794655",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6aba32cc805d085"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c82a0df6aad5402",
            "route_table_id": "rtb-0bb07b1438df771e4",
            "subnet_id": "subnet-022c7c17a8e01bf4e"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d7e526f250f79cc",
            "route_table_id": "rtb-06cc9a9ce9f0a5cca",
            "subnet_id": "subnet-0f33ff8a562006d04"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-022c7c17a8e01bf4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.82.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022c7c17a8e01bf4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet"
            },
            "tags_all": {
              "Name": "DEV Private Subnet"
            },
            "vpc_id": "vpc-0d6aba32cc805d085"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-0f33ff8a562006d04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.82.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f33ff8a562006d04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet"
            },
            "tags_all": {
              "Name": "DEV Public Subnet"
            },
            "vpc_id": "vpc-0d6aba32cc805d085"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:vpc/vpc-0d6aba32cc805d085",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.82.0.0/16",
            "default_network_acl_id": "acl-0b9f1611dafd66e94",
            "default_route_table_id": "rtb-0c4d09d3f505f3679",
            "default_security_group_id": "sg-0a7ff77fdfc6df86e",
            "dhcp_options_id": "dopt-01405e481c25ccd79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6aba32cc805d085",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4d09d3f505f3679",
            "owner_id": "311747045935",
            "tags": {
              "Name": "dev VPC"
            },
            "tags_all": {
              "Name": "dev VPC"
            }
          }
        }
      ]
    }
  ]
}